--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "emitDecoratorMetadata": true,
     "noEmitHelpers": true,
     "noEmitOnError": true,
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true,
+    "maxNodeModuleJsDepth": 5,
+    "downlevelIteration": true,
     "jsx": "react",
     "lib": ["es2017", "dom"],
     "baseUrl": ".",
